generated-out/vanilla/dear-imgui-raw-vanilla-internal/cbits/DearImGuiWrappers.h

void ImGui_EndBoxSelect_wrap(ImRect const* scope_rect, ImGuiMultiSelectFlags ms_flags);
void ImGui_FindBestWindowPosForPopup_wrap(ImGuiWindow* window, ImVec2* _out);
void ImGui_FindBestWindowPosForPopupEx_wrap(ImVec2 const* ref_pos, ImVec2 const* size, ImGuiDir* last_dir, ImRect const* r_outer, ImRect const* r_avoid, ImGuiPopupPositionPolicy policy, ImVec2* _out);
void ImGui_FindHoveredWindowEx_wrap(ImVec2 const* pos, bool find_first_and_in_any_viewport, ImGuiWindow** out_hovered_window, ImGuiWindow** out_hovered_window_under_moving_window);
int ImGui_PlotEx_wrap(ImGuiPlotType plot_type, const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* size_arg);