generated-out/vanilla/dear-imgui-raw-vanilla-internal/src/DearImGui/Raw/Internal/ImGui.hsc


-- C: void ImGui::DebugTextUnformattedWithLocateItem(const char* line_begin, const char* line_end)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_DebugTextUnformattedWithLocateItem"
  imGui_DebugTextUnformattedWithLocateItem :: CString -> CString -> IO ()
-- C: ImU64 ImGui::DebugTextureIDToU64(ImTextureID tex_id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_DebugTextureIDToU64"
  imGui_DebugTextureIDToU64 :: ImTextureID -> IO ImU64
-- C: void ImGui::DemoMarker(const char* file, int line, const char* section)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_DemoMarker"
  imGui_DemoMarker :: CString -> CInt -> CString -> IO ()
-- C: bool ImGui::DragBehavior(ImGuiID id, ImGuiDataType data_type, void* p_v, float v_speed, const void* p_min, const void* p_max, const char* format, ImGuiSliderFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_DragBehavior"
  imGui_DragBehavior :: ImGuiID -> ImGuiDataType -> (Ptr ()) -> CFloat -> (Ptr ()) -> (Ptr ()) -> CString -> ImGuiSliderFlags -> IO CBool
foreign import capi unsafe "DearImGuiWrappers.h ImGui_EndBoxSelect_wrap"
  c_imGui_EndBoxSelect :: (Ptr ImRect) -> ImGuiMultiSelectFlags -> IO ()

imGui_EndBoxSelect :: ImRect -> ImGuiMultiSelectFlags -> IO ()
imGui_EndBoxSelect scope_rect ms_flags =
  with scope_rect $ \_p0 -> c_imGui_EndBoxSelect _p0 ms_flags

-- C: void ImGui::EndColumns()
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_EndColumns"
  imGui_EndColumns :: IO ()
-- C: void ImGui::EndComboPreview()
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_EndComboPreview"
  imGui_EndComboPreview :: IO ()
-- C: void ImGui::EndDisabledOverrideReenable()
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_EndDisabledOverrideReenable"
  imGui_EndDisabledOverrideReenable :: IO ()
-- C: void ImGui::EndErrorTooltip()
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_EndErrorTooltip"
  imGui_EndErrorTooltip :: IO ()
-- C: void ImGui::ErrorCheckEndFrameFinalizeErrorTooltip()
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_ErrorCheckEndFrameFinalizeErrorTooltip"
  imGui_ErrorCheckEndFrameFinalizeErrorTooltip :: IO ()
-- C: void ImGui::ErrorCheckUsingSetCursorPosToExtendParentBoundaries()
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_ErrorCheckUsingSetCursorPosToExtendParentBoundaries"
  imGui_ErrorCheckUsingSetCursorPosToExtendParentBoundaries :: IO ()
-- C: bool ImGui::ErrorLog(const char* msg)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_ErrorLog"
  imGui_ErrorLog :: CString -> IO CBool
-- C: void ImGui::ErrorRecoveryStoreState(ImGuiErrorRecoveryState* state_out)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_ErrorRecoveryStoreState"
  imGui_ErrorRecoveryStoreState :: (Ptr ImGuiErrorRecoveryState) -> IO ()
-- C: void ImGui::ErrorRecoveryTryToRecoverState(const ImGuiErrorRecoveryState* state_in)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_ErrorRecoveryTryToRecoverState"
  imGui_ErrorRecoveryTryToRecoverState :: (Ptr ImGuiErrorRecoveryState) -> IO ()
-- C: void ImGui::ErrorRecoveryTryToRecoverWindowState(const ImGuiErrorRecoveryState* state_in)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_ErrorRecoveryTryToRecoverWindowState"
  imGui_ErrorRecoveryTryToRecoverWindowState :: (Ptr ImGuiErrorRecoveryState) -> IO ()
-- C: void ImGui::ExtendHitBoxWhenNearViewportEdge(ImGuiWindow* window, ImRect* bb, float threshold, ImGuiAxis axis)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_ExtendHitBoxWhenNearViewportEdge"
  imGui_ExtendHitBoxWhenNearViewportEdge :: (Ptr ImGuiWindow) -> (Ptr ImRect) -> CFloat -> ImGuiAxis -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImGui_FindBestWindowPosForPopup_wrap"
  c_imGui_FindBestWindowPosForPopup :: (Ptr ImGuiWindow) -> (Ptr ImVec2) -> IO ()

imGui_FindBestWindowPosForPopup :: (Ptr ImGuiWindow) -> IO ImVec2
imGui_FindBestWindowPosForPopup window =
  alloca $ \_pOut -> c_imGui_FindBestWindowPosForPopup window _pOut >> peek _pOut

foreign import capi unsafe "DearImGuiWrappers.h ImGui_FindBestWindowPosForPopupEx_wrap"
  c_imGui_FindBestWindowPosForPopupEx :: (Ptr ImVec2) -> (Ptr ImVec2) -> (Ptr ImGuiDir) -> (Ptr ImRect) -> (Ptr ImRect) -> ImGuiPopupPositionPolicy -> (Ptr ImVec2) -> IO ()

imGui_FindBestWindowPosForPopupEx :: ImVec2 -> ImVec2 -> (Ptr ImGuiDir) -> ImRect -> ImRect -> ImGuiPopupPositionPolicy -> IO ImVec2
imGui_FindBestWindowPosForPopupEx ref_pos size last_dir r_outer r_avoid policy =
  with ref_pos $ \_p0 -> with size $ \_p1 -> with r_outer $ \_p3 -> with r_avoid $ \_p4 -> alloca $ \_pOut -> c_imGui_FindBestWindowPosForPopupEx _p0 _p1 last_dir _p3 _p4 policy _pOut >> peek _pOut

-- C: ImGuiWindow* ImGui::FindBlockingModal(ImGuiWindow* window)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_FindBlockingModal"
  imGui_FindBlockingModal :: (Ptr ImGuiWindow) -> IO (Ptr ImGuiWindow)
-- C: ImGuiWindow* ImGui::FindBottomMostVisibleWindowWithinBeginStack(ImGuiWindow* window)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_FindBottomMostVisibleWindowWithinBeginStack"
  imGui_FindBottomMostVisibleWindowWithinBeginStack :: (Ptr ImGuiWindow) -> IO (Ptr ImGuiWindow)
foreign import capi unsafe "DearImGuiWrappers.h ImGui_FindHoveredWindowEx_wrap"
  c_imGui_FindHoveredWindowEx :: (Ptr ImVec2) -> CBool -> (Ptr (Ptr ImGuiWindow)) -> (Ptr (Ptr ImGuiWindow)) -> IO ()

imGui_FindHoveredWindowEx :: ImVec2 -> CBool -> (Ptr (Ptr ImGuiWindow)) -> (Ptr (Ptr ImGuiWindow)) -> IO ()
imGui_FindHoveredWindowEx pos find_first_and_in_any_viewport out_hovered_window out_hovered_window_under_moving_window =
  with pos $ \_p0 -> c_imGui_FindHoveredWindowEx _p0 find_first_and_in_any_viewport out_hovered_window out_hovered_window_under_moving_window
